// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webpack integration works with edgecase-comment-has-backtick configuration: edgecase-comment-has-backtick 1`] = `
"(self[\\"webpackChunk\\"] = self[\\"webpackChunk\\"] || []).push([[\\"unit_test\\"],{

/***/ \\"./src/style.css\\":
/*!***********************!*\\\\
  !*** ./src/style.css ***!
  \\\\***********************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__)
/* harmony export */ });
const styleSheet = new CSSStyleSheet(); styleSheet.replaceSync(\`.btn {
    background-color: blue;
}

.panel {
    background-color: orange;
    border-style: solid;
}

.white-listed {
    background-color: white;
}

/*
 * Discovered when adding tailwind
 */

/**
 * Render the \\\\\`main\\\\\` element consistently in IE.
 */
\`); /* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = (styleSheet);

/***/ }),

/***/ \\"./src/index.js\\":
/*!**********************!*\\\\
  !*** ./src/index.js ***!
  \\\\**********************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _panel_js__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./panel.js */ \\"./src/panel.js\\");


/***/ }),

/***/ \\"./src/panel.js\\":
/*!**********************!*\\\\
  !*** ./src/panel.js ***!
  \\\\**********************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _style_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./style.css */ \\"./src/style.css\\");


class Panel extends HTMLElement {
    constructor() {
        super();

        this.attachShadow({mode: \\"open\\"});
        this.shadowRoot.innerHTML = \`<div class=\\"panel\\">Panel CMP</div>\`;
        this.shadowRoot.adoptedStyleSheets = [_style_css__WEBPACK_IMPORTED_MODULE_0__.default]
    }
}

if (customElements.get('ata-panel') == null) {
    customElements.define('ata-panel', Panel);
}


/***/ })

},
/******/ __webpack_require__ => { // webpackRuntimeModules
/******/ \\"use strict\\";
/******/ 
/******/ var __webpack_exec__ = (moduleId) => (__webpack_require__(__webpack_require__.s = moduleId))
/******/ var __webpack_exports__ = (__webpack_exec__(\\"./src/index.js\\"));
/******/ }
]);"
`;

exports[`Webpack integration works with multiple-with-postcss-loader configuration: multiple-with-postcss-loader 1`] = `
"(self[\\"webpackChunk\\"] = self[\\"webpackChunk\\"] || []).push([[\\"unit_test\\"],{

/***/ \\"./src/style.css\\":
/*!***********************!*\\\\
  !*** ./src/style.css ***!
  \\\\***********************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__)
/* harmony export */ });
const styleSheet = new CSSStyleSheet(); styleSheet.replaceSync(\`.panel {
    background-color: orange;
    border-style: solid;
}

.white-listed {
    background-color: white;
}

form {
    padding-left: 1em;
}
\`); /* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = (styleSheet);

/***/ }),

/***/ \\"./src/form.js\\":
/*!*********************!*\\\\
  !*** ./src/form.js ***!
  \\\\*********************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _style_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./style.css */ \\"./src/style.css\\");


class Form extends HTMLElement {
    constructor() {
        super();

        this.attachShadow({mode: \\"open\\"});
        this.shadowRoot.innerHTML = \`<div class=\\"form\\"><form>Form CMP</form></div>\`;
        this.shadowRoot.adoptedStyleSheets = [_style_css__WEBPACK_IMPORTED_MODULE_0__.default]
    }
}

if (customElements.get('ata-panel') == null) {
    customElements.define('ata-panel', Form);
}


/***/ }),

/***/ \\"./src/index.js\\":
/*!**********************!*\\\\
  !*** ./src/index.js ***!
  \\\\**********************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _panel__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./panel */ \\"./src/panel.js\\");
/* harmony import */ var _form__WEBPACK_IMPORTED_MODULE_1__ = __webpack_require__(/*! ./form */ \\"./src/form.js\\");



/***/ }),

/***/ \\"./src/panel.js\\":
/*!**********************!*\\\\
  !*** ./src/panel.js ***!
  \\\\**********************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _style_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./style.css */ \\"./src/style.css\\");


class Panel extends HTMLElement {
    constructor() {
        super();

        this.attachShadow({mode: \\"open\\"});
        this.shadowRoot.innerHTML = \`<div class=\\"panel\\">Panel CMP</div>\`;
        this.shadowRoot.adoptedStyleSheets = [_style_css__WEBPACK_IMPORTED_MODULE_0__.default]
    }
}

if (customElements.get('ata-form') == null) {
    customElements.define('ata-form', Panel);
}


/***/ })

},
/******/ __webpack_require__ => { // webpackRuntimeModules
/******/ \\"use strict\\";
/******/ 
/******/ var __webpack_exec__ = (moduleId) => (__webpack_require__(__webpack_require__.s = moduleId))
/******/ var __webpack_exports__ = (__webpack_exec__(\\"./src/index.js\\"));
/******/ }
]);"
`;

exports[`Webpack integration works with simple configuration: simple 1`] = `
"(self[\\"webpackChunk\\"] = self[\\"webpackChunk\\"] || []).push([[\\"unit_test\\"],{

/***/ \\"./src/style.css\\":
/*!***********************!*\\\\
  !*** ./src/style.css ***!
  \\\\***********************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__)
/* harmony export */ });
const styleSheet = new CSSStyleSheet(); styleSheet.replaceSync(\`.btn {
    background-color: blue;
}

.panel {
    background-color: orange;
    border-style: solid;
}

.white-listed {
    background-color: white;
}
\`); /* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = (styleSheet);

/***/ }),

/***/ \\"./src/index.js\\":
/*!**********************!*\\\\
  !*** ./src/index.js ***!
  \\\\**********************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _panel_js__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./panel.js */ \\"./src/panel.js\\");


/***/ }),

/***/ \\"./src/panel.js\\":
/*!**********************!*\\\\
  !*** ./src/panel.js ***!
  \\\\**********************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _style_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./style.css */ \\"./src/style.css\\");


class Panel extends HTMLElement {
    constructor() {
        super();

        this.attachShadow({mode: \\"open\\"});
        this.shadowRoot.innerHTML = \`<div class=\\"panel\\">Panel CMP</div>\`;
        this.shadowRoot.adoptedStyleSheets = [_style_css__WEBPACK_IMPORTED_MODULE_0__.default]
    }
}

if (customElements.get('ata-panel') == null) {
    customElements.define('ata-panel', Panel);
}


/***/ })

},
/******/ __webpack_require__ => { // webpackRuntimeModules
/******/ \\"use strict\\";
/******/ 
/******/ var __webpack_exec__ = (moduleId) => (__webpack_require__(__webpack_require__.s = moduleId))
/******/ var __webpack_exports__ = (__webpack_exec__(\\"./src/index.js\\"));
/******/ }
]);"
`;

exports[`Webpack integration works with simple-with-purge configuration: simple-with-purge 1`] = `
"(self[\\"webpackChunk\\"] = self[\\"webpackChunk\\"] || []).push([[\\"unit_test\\"],{

/***/ \\"./src/style.css\\":
/*!***********************!*\\\\
  !*** ./src/style.css ***!
  \\\\***********************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__)
/* harmony export */ });
const styleSheet = new CSSStyleSheet(); styleSheet.replaceSync(\`
\`); /* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = (styleSheet);

/***/ }),

/***/ \\"./src/index.js\\":
/*!**********************!*\\\\
  !*** ./src/index.js ***!
  \\\\**********************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _panel_js__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./panel.js */ \\"./src/panel.js\\");


/***/ }),

/***/ \\"./src/panel.js\\":
/*!**********************!*\\\\
  !*** ./src/panel.js ***!
  \\\\**********************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _style_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./style.css */ \\"./src/style.css\\");


class Panel extends HTMLElement {
    constructor() {
        super();

        this.attachShadow({mode: \\"open\\"});
        this.shadowRoot.innerHTML = \`<div class=\\"panel\\">Panel CMP</div>\`;
        this.shadowRoot.adoptedStyleSheets = [_style_css__WEBPACK_IMPORTED_MODULE_0__.default]
    }
}

if (customElements.get('ata-panel') == null) {
    customElements.define('ata-panel', Panel);
}


/***/ })

},
/******/ __webpack_require__ => { // webpackRuntimeModules
/******/ \\"use strict\\";
/******/ 
/******/ var __webpack_exec__ = (moduleId) => (__webpack_require__(__webpack_require__.s = moduleId))
/******/ var __webpack_exports__ = (__webpack_exec__(\\"./src/index.js\\"));
/******/ }
]);"
`;
